// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineIndicator> renders as expected with interval, currentTime, and is not playing 1`] = `
<div
  className="time-indicator-container"
>
  <div
    className="time-indicator"
    style={
      Object {
        "left": "10%",
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`<TimelineIndicator> renders as expected with interval, currentTime, and is playing 1`] = `
<div
  className="time-indicator-container"
>
  <div
    className="time-indicator"
    style={
      Object {
        "left": "10.01%",
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`<TimelineIndicator> renders as expected with no interval, currentTime, and is not playing 1`] = `
<div
  className="time-indicator-container"
>
  <div
    className="time-indicator"
    style={
      Object {
        "left": "10%",
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`<TimelineIndicator> renders as expected with no interval, currentTime, and is playing 1`] = `
<div
  className="time-indicator-container"
>
  <div
    className="time-indicator"
    style={
      Object {
        "left": "10.01%",
        "position": "relative",
      }
    }
  />
</div>
`;
